# portuni

./: .env.schema  .fallowrc.jsonc  .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  artifacts-hosting.md  artifacts.md  biome.json  conceptual-map.md  implementation.md  package-lock.json  package.json  seed-popp.ts  specs.md  test-mcp.ts  test-phase1.ts  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
app/src/components/: AccountSection.tsx  ActorsPage.tsx  DatePicker.tsx  DetailPane.events.tsx  DetailPane.files.tsx  DetailPane.tsx  EditorFullscreen.tsx  EditorPane.tsx  ErrorBoundary.tsx  GraphView.tsx  MarkdownEditor.tsx  MarkdownPreview.tsx  McpServerSection.tsx  SettingsPage.actors.tsx  SettingsPage.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusFooter.tsx  TerminalPane.tsx  TerminalTabs.tsx  TursoSetupGate.tsx  WorkspaceNodeList.tsx  WorkspaceView.tsx
app/src/lib/: backend-url.ts  central.ts  colors.ts  error-overlay.ts  events.ts  normalize.ts  prompt.ts  safe-url.ts  sessions.ts  settings.ts  theme.ts  use-file-editor.ts  use-mcp-status.ts  use-now-tick.ts  use-sync-pending.ts
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/src/: auth.rs  lib.rs  pty.rs
apps/server/: desktop.ts  index.ts
apps/server/api/: actors.ts  auth.ts  events.ts  files.ts  health.ts  nodes.ts  write-scope.ts
apps/server/auth/: adapter.ts  env-adapter.ts  google-adapter.ts  min-scopes.ts  node-access.ts  request-identity.ts  roles.ts  session-token.ts
apps/server/boot/: mirror-watch.ts
apps/server/domain/: events.ts  nodes.ts  responsibilities.ts  sandbox-profile.ts  scope-staging.ts  write-scope.ts
apps/server/http/: rate-limit.ts  server.ts
apps/server/infra/: schema-migrations.ts  schema-triggers.ts
apps/server/mcp/: scope-reconciler.ts  scope.ts  server.ts  stdio-entry.ts
apps/server/shared/: api-types.ts  popp.ts  safe-path.ts  types.ts
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  main.tsx  types.ts
docs/: artifacts-hosting.md  audit-2026-06-09.md  auth-refactor-plan.md  conceptual-map.md  env-vars.md  implementation-plan.md  lessons-learned.md  node-launch-flow-plan.md  release-process.md  sandbox-spike-2026-06-10.md  specs.md
docs-site/: astro.config.mjs  package-lock.json  package.json
docs/architecture/: central-file-content-phase-b.md  data-modes.md  file-sync.md  multi-instance.md  scope-disk-projection.md
docs/design/: graph-node-design.html  graph-node-exploration.html  graph-node.md
docs/playgrounds/: workspace-panel-playground.html
docs/vision/: portuni-as-workspace.md
mcp-resources/: scope-rules.md  sync-model.md
scripts/: backup-turso.ts  build-sidecar.mjs  bulk-promote.ts  cleanup-ignored-files.ts  deploy-vps.sh  migrate-mirrors-to-local-db.ts  move-rogue-files.ts  portuni-context.sh  portuni-guard.sh  portuni-run.sh  scaffold-drive-structure.ts  setup-tempo-drive.ts  store-tempo-test.ts  unmark-006.ts
sites/docs/: astro.config.mjs  package-lock.json  package.json
sites/marketing/: package-lock.json  package.json
src/: api-types.ts  db.ts  desktop.ts  index.ts  popp.ts  portuniignore.ts  schema.ts  scope-materialize.ts  scope.ts  server-config.ts  server.ts  tools.ts  types.ts  write-scope.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  lib.rs  mcp_install.rs  pty.rs
src/api/: actors.ts  context.ts  data-sources.ts  edges.ts  events.ts  files.ts  graph.ts  health.ts  nodes.ts  responsibilities.ts  router.ts  tools.ts  users.ts  write-scope.ts
src/auth/: device-tokens.ts  google-adapter.ts  min-scopes.ts  roles.ts  users.ts
src/domain/: actors.ts  edges.ts  entity-attributes.ts  events.ts  nodes.ts  responsibilities.ts  sandbox-profile.ts  scope-materialize.ts  scope-staging.ts  write-scope.ts
src/http/: middleware.ts  server.ts
src/infra/: audit.ts  backup.ts  db.ts  schema-migrations.ts  schema-triggers.ts  schema.ts  server-config.ts
src/mcp/: auto-seed.ts  list-scope-gate.ts  scope.ts  server.ts  stdio-entry.ts  transport.ts
src/resources/: index.ts
src/shared/: api-types.ts  popp.ts  safe-url.ts  types.ts
src/sync/: README.md  adapter-cache.ts  device-tokens.ts  drive-adapter.ts  engine.ts  hash.ts  local-db.ts  opendal-adapter.ts  remote-path.ts  sync-key.ts  token-store-file.ts  token-store-keychain.ts  token-store-varlock.ts  token-store.ts  types.ts
src/tools/: actors.ts  context.ts  edges.ts  entity-attributes.ts  events.ts  files.ts  get-node.ts  mirrors.ts  nodes.ts  responsibilities.ts  scope.ts  sync-remotes.ts  sync-snapshot.ts  sync-status.ts
test/: actors.test.ts  auth-device-tokens.test.ts  auth-enforcement-global.test.ts  auth-env-adapter.test.ts  auth-google-adapter.test.ts  auth-node-access-integration.test.ts  auth-node-access.test.ts  auth-request-identity.test.ts  auth-roles.test.ts  auth-session-token.test.ts  auth-users-upsert.test.ts  auto-seed-scope.test.ts  backup-dump.test.ts  context-extensions.test.ts  db-foreign-keys.test.ts  desktop-entry.test.ts  desktop-smoke.test.ts  discover-local.test.ts  entity-attributes.test.ts  events-grouping.test.ts  events-supersede.test.ts  events.test.ts  file-content-central-e2e.test.ts  file-content-remote.test.ts  file-content-rest.test.ts  file-content.test.ts  files-unique-remote.test.ts  http-hardening.test.ts  http-rate-limit.test.ts  mcp-identity-attribution.test.ts  mcp-info.test.ts  mcp-rematerialize-on-boot.test.ts  mcp-smoke.test.ts  mcp-stdio.test.ts  migration-006-invariants.test.ts  migration-006.test.ts  migration-009-010-remotes.test.ts  migration-011-drop-turso-mirrors.test.ts  migration-012-drop-local-path.test.ts  migration-013-sync-key.test.ts  (+71 more)
test/helpers/: shared-db.ts
website/: astro.config.mjs  package-lock.json  package.json
(+158 files in other folders)
