[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.5"
rand = "0.8"
# v3 has no default features; pick platform-native stores explicitly. macOS
# is the only smoke-tested target for this PR but cross-platform features
# stay enabled so cargo builds on Linux/Windows without code changes.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
# Used by the api_request command to proxy webview HTTP calls into the
# sidecar. Version pinned to match what tauri already pulls in transitively
# (Cargo.lock) so we don't bring a second copy along.
reqwest = "0.13"
# Cross-platform pseudo-terminal for the embedded terminal pane. Spawns
# the user's shell in a true PTY (so curses apps, prompts, color, resize
# all work correctly) and exposes read/write/resize/kill — same code
# path on macOS, Linux, and Windows.
portable-pty = "0.9"
# Base64 encoding for the PTY data event payload. We send raw bytes
# (not a Rust String) so that multibyte UTF-8 sequences split across
# read() chunks can't get replaced with U+FFFD in transit — that
# replacement changes cell widths and desyncs TUIs like Claude Code
# (visible as duplicated rows and offset glyphs after Unicode chars).
# xterm.js' write() accepts Uint8Array and handles streaming UTF-8.
base64 = "0.22"
