[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# No `devtools` feature: debug builds (cargo tauri dev) get the inspector
# automatically; shipping it in release would let any local process attach
# to the webview inspector of the installed app.
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.5"
rand = "0.8"
# v3 has no default features; pick platform-native stores explicitly. macOS
# is the only smoke-tested target for this PR but cross-platform features
# stay enabled so cargo builds on Linux/Windows without code changes.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
# Used by the api_request command to proxy webview HTTP calls into the
# sidecar. Version pinned to match what tauri already pulls in transitively
# (Cargo.lock) so we don't bring a second copy along.
reqwest = { version = "0.13", features = ["json", "form"] }
# Cross-platform pseudo-terminal for the embedded terminal pane. Spawns
# the user's shell in a true PTY (so curses apps, prompts, color, resize
# all work correctly) and exposes read/write/resize/kill — same code
# path on macOS, Linux, and Windows.
portable-pty = "0.9"
# Base64 encoding for the PTY data event payload. We send raw bytes
# (not a Rust String) so that multibyte UTF-8 sequences split across
# read() chunks can't get replaced with U+FFFD in transit — that
# replacement changes cell widths and desyncs TUIs like Claude Code
# (visible as duplicated rows and offset glyphs after Unicode chars).
# xterm.js' write() accepts Uint8Array and handles streaming UTF-8.
base64 = "0.22"
# Open external URLs/paths in the OS default handler. The JS shell plugin's
# `open` proved to be a silent no-op inside the macOS webview, so external
# links (Google Drive folder, actor links) are opened natively via the
# open_external command instead. Already present transitively via
# tauri-plugin-shell (Cargo.lock pins 5.3.4); promoted to a direct dep.
open = "5"
# Parse + scheme-validate URLs before handing them to the OS opener, so
# open_external can't be coaxed into launching file:// or arbitrary custom
# URL handlers. Already present transitively (Cargo.lock pins 2.5.x).
url = "2"
# SHA-256 for PKCE S256 challenge computation (Google OAuth).
# Already present transitively (Cargo.lock pins 0.10.x); promoted to a
# direct dep so the auth module can use it without relying on transitive
# availability.
sha2 = "0.10"
# Comment- and format-preserving TOML editor. Used by the Mistral Vibe MCP
# installer: Vibe's ~/.vibe/config.toml carries `mcp_servers = []` as a
# value array (not [[mcp_servers]] blocks), so naive text appending would
# produce a duplicate-key TOML error. toml_edit lets us push our server
# into the existing array idempotently without clobbering the rest of the
# (large, default) config. Already present transitively (Cargo.lock).
toml_edit = "0.25"
